; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mc146818/extr_mc146818.c_mc146818_def_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mc146818/extr_mc146818.c_mc146818_def_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mc146818_softc = type { i32, i32 }

@MC_ADDR = common dso_local global i32 0, align 4
@MC_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mc146818_def_write(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.mc146818_softc*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.mc146818_softc* @device_get_softc(i32 %8)
  store %struct.mc146818_softc* %9, %struct.mc146818_softc** %7, align 8
  %10 = load %struct.mc146818_softc*, %struct.mc146818_softc** %7, align 8
  %11 = getelementptr inbounds %struct.mc146818_softc, %struct.mc146818_softc* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.mc146818_softc*, %struct.mc146818_softc** %7, align 8
  %14 = getelementptr inbounds %struct.mc146818_softc, %struct.mc146818_softc* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @MC_ADDR, align 4
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @bus_space_write_1(i32 %12, i32 %15, i32 %16, i32 %17)
  %19 = load %struct.mc146818_softc*, %struct.mc146818_softc** %7, align 8
  %20 = getelementptr inbounds %struct.mc146818_softc, %struct.mc146818_softc* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.mc146818_softc*, %struct.mc146818_softc** %7, align 8
  %23 = getelementptr inbounds %struct.mc146818_softc, %struct.mc146818_softc* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @MC_DATA, align 4
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @bus_space_write_1(i32 %21, i32 %24, i32 %25, i32 %26)
  ret void
}

declare dso_local %struct.mc146818_softc* @device_get_softc(i32) #1

declare dso_local i32 @bus_space_write_1(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
